@@ -4,6 +4,9 @@
 #include <windows.h>
 #include <stdint.h>
 
+#define ARRSIZE(buff) (sizeof(buff)/sizeof(buff[0]))
+#define CAST(tp,expr) ((tp)(expr))
+
 #ifdef __cplusplus
 extern "C" {
 #endif
