@@ -1,4 +1,8 @@
-﻿shmuel 22.06.2014 13:11:38 +0200 - build 378
+﻿shmuel 23.06.2014 20:38:21 +0200 - build 379
+
+1. LuaFAR: мелкий рефакторинг.
+
+shmuel 22.06.2014 13:11:38 +0200 - build 378
 
 1. MoonScript 0.2.6.
 
